Kubernetes/ejercicio 3/deployment-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todo-api
  name: todo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  strategy: {}
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
      - image: luisgo/todo-api
        name: todo-api
        resources: {}
status: {}
