Kubernetes/ejercicio 3/deployment-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todo-front
  name: todo-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-front
  strategy: {}
  template:
    metadata:
      labels:
        app: todo-front
    spec:
      containers:
      - image: luisgo/todo-front
        name: todo-front
        ports:
        - containerPort: 80
        resources: {}
status: {}
