Kubernetes/ejercicio 3/ingress-todo-front.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-todo-front
  labels:
    name: ingress-todo-front
spec:
  rules:
  - host: "lemoncode-kubernetes.com"
    http:
      paths:
        - backend:
            service:
              name: todo-front
              port:
                number: 80
          path: /
          pathType: Prefix
